--- a/public/index.html
+++ b/public/index.html
@@ -38,16 +38,16 @@
 </head>
 <body>
 
-  <header class="header">
-    <h1>
-      Weather PWA
-      <a href="https://darksky.net/poweredby/" class="powered-by">
-        Powered by Dark Sky
-      </a>
-    </h1>
-    <button id="butInstall" aria-label="Install" hidden></button>
-    <button id="butRefresh" aria-label="Refresh"></button>
-  </header>
+<!--  <header class="header">-->
+<!--    <h1>-->
+<!--      Weather PWA-->
+<!--      <a href="https://darksky.net/poweredby/" class="powered-by">-->
+<!--        Powered by Dark Sky-->
+<!--      </a>-->
+<!--    </h1>-->
+<!--    <button id="butInstall" aria-label="Install" hidden></button>-->
+<!--    <button id="butRefresh" aria-label="Refresh"></button>-->
+<!--  </header>-->
 
   <main class="main">
 
@@ -206,7 +206,16 @@
   <script src="/scripts/app.js"></script>
   <!-- CODELAB: Add the install script here -->
   <script>
-    // CODELAB: Register service worker.
+    if ('serviceWorker' in navigator) {
+      window.addEventListener('load', () => {
+        navigator.serviceWorker.register('/service-worker.js')
+          .then((reg) => {
+            console.log('Service worker registered.', reg);
+          });
+      });
+    } else {
+      console.log('Service worker did not support!!!!!');
+    }
   </script>
 
 </body>
